# Search-Engine

./: .gitignore  CMakeLists.txt  Search engine plan.drawio  main.cpp  setting.ini
include/: Crowler.h  DBInterfejs.h  DataBase.h  Indexer.h  SYMBOLS.h  SafeQueue.h  SearchEngine.h  httpclient.h  initializer.h  threadpool.h
src/Crowler/: Сrowler.cpp
src/Crowler/HTTPClient/: httpclient.cpp
src/Crowler/INI_parser/: INI_parser.h
src/Crowler/Indexer/: Indexer.cpp
src/Crowler/ThreadPool/: threadpool.cpp
src/Crowler/ThreadPool/safe_queue/: SafeQueue.tpp
src/Crowler/ThreadPool/thread_pool/: threadpool.h
src/DataBase_Interfejs/: DBInterfejs.cpp  DataBase.cpp
src/Initializer/: initializer.cpp
src/Initializer/INI_parser/: INI_parser.cpp
src/Search_Engine/: SearchEngine.cpp
